# python_molecular_editor_installer

./: CONTRIBUTING.md  README.md  SECURITY.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  release.yml
docs/: path.md
moleditpy-installer/: README.md  TESTING.md  pyproject.toml
moleditpy-installer/moleditpy_installer/: __main__.py  main.py  tui.py
moleditpy-installer/moleditpy_installer.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
moleditpy-installer/moleditpy_installer/data/: file_icon.icns  icon.icns
moleditpy-installer/tests/: test_main.py
tests/: README.md  test_main.py
