[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "moleditpy-installer"
version = "3.0.6"
authors = [
  { name="HiroYokoyama", email="titech.yoko.hiro@gmail.com" },
]
description = "Installer and application bundler for MoleditPy"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Operating System :: OS Independent",
]

dependencies = [
    "pyshortcuts >= 1.0.0",
    "textual >= 0.86",
    "moleditpy-linux; sys_platform == 'linux'",
    "moleditpy; sys_platform == 'win32'",
    "moleditpy; sys_platform == 'darwin'",
]

[project.optional-dependencies]
test = [
    "pytest >= 7.0",
    "pytest-mock >= 3.0",
    "pytest-cov >= 4.0",
]

[project.scripts]
moleditpy-installer = "moleditpy_installer.main:main"

[tool.setuptools.package-data]
"moleditpy_installer" = ["data/*.ico", "data/*.icns", "data/*.png"]


